Add reject reason
